--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
 
 		<!-- JS -->
 		<script>
-			'use strict';
-			// Temp
 			var log = function(str){
 				console.log(str);
-			}
+			};
 		</script>
 		<script src="js/libs/jquery-1.9.1.min.js"></script>
 
-		<!-- UI -->
+		<!-- UI -->		
 		<script src="js/ui/ui-classes/panel.js"></script>
+		<script src="js/ui/ui-classes/modal.js"></script>
+		<script src="js/ui/ui-classes/menu.js"></script>
 		<script src="js/ui/ui.js"></script>
-
 	</body>
 </html>
