--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 		</script>
 		<script src="js/libs/jquery-1.9.1.min.js"></script>
 
+		<!-- SCOPE -->		
+		<script src="js/canvaspainter/canvaspainter.js"></script>
 		<!-- UI -->		
-		<script src="js/ui/ui-classes/panel.js"></script>
-		<script src="js/ui/ui-classes/modal.js"></script>
-		<script src="js/ui/ui-classes/menu.js"></script>
-		<script src="js/ui/ui.js"></script>
+		<script src="js/canvaspainter/ui/panel.js"></script>
+		<script src="js/canvaspainter/ui/modal.js"></script>
+		<script src="js/canvaspainter/ui/menu.js"></script>
+		<script src="js/canvaspainter/ui/ui.js"></script>
+
+		<!-- Init -->		
+		<script src="js/canvaspainter/init.js"></script>
 	</body>
 </html>
