--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
 
 		<!-- SCOPE -->		
 		<script src="js/canvaspainter/canvaspainter.js"></script>
-		<!-- UI -->		
+
+		<!-- App -->		
+		<script src="js/canvaspainter/app/document.js"></script>
+		<script src="js/canvaspainter/app/layer.js"></script>
+		<script src="js/canvaspainter/app/app.js"></script>
+
+				<!-- UI -->		
 		<script src="js/canvaspainter/ui/panel.js"></script>
 		<script src="js/canvaspainter/ui/modal.js"></script>
 		<script src="js/canvaspainter/ui/menu.js"></script>
+		<script src="js/canvaspainter/ui/button.js"></script>
 		<script src="js/canvaspainter/ui/ui.js"></script>
 
 		<!-- Init -->		
