--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		<script src="js/canvaspainter/ui/modal.js"></script>
 		<script src="js/canvaspainter/ui/menu.js"></script>
 		<script src="js/canvaspainter/ui/button.js"></script>
+		<script src="js/canvaspainter/ui/document.js"></script>
+		<script src="js/canvaspainter/ui/document-container.js"></script>
 		<script src="js/canvaspainter/ui/ui.js"></script>
 
 		<!-- Init -->		
