--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 
 				<!-- UI -->		
 		<script src="js/canvaspainter/ui/panel.js"></script>
+		<script src="js/canvaspainter/ui/panel-color.js"></script>
 		<script src="js/canvaspainter/ui/modal.js"></script>
 		<script src="js/canvaspainter/ui/menu.js"></script>
 		<script src="js/canvaspainter/ui/button.js"></script>
+		<script src="js/canvaspainter/ui/slider.js"></script>
+		<script src="js/canvaspainter/ui/expando.js"></script>
 		<script src="js/canvaspainter/ui/document.js"></script>
 		<script src="js/canvaspainter/ui/document-container.js"></script>
 		<script src="js/canvaspainter/ui/ui.js"></script>
