--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<!-- App -->		
 		<script src="js/canvaspainter/app/document.js"></script>
 		<script src="js/canvaspainter/app/layer.js"></script>
+		<script src="js/canvaspainter/app/color.js"></script>
 		<script src="js/canvaspainter/app/app.js"></script>
 
 				<!-- UI -->		
